--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="https://cdn.ramseysolutions.net/media/b2b/edu/foundations_digital/app/fd_favicon_32x32.png">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,500,700" rel="stylesheet">
-    <title>Foundations Digital</title>
+    <title>1Tap 2.0</title>
   </head>
   <body>
     <div id="root"></div>
